[package]
name = "klite-image-compressor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
glob = "0.3.0"
image = "0.23.14"
libwebp-sys = { version = "0.4.2", features = ["avx2", "sse41", "neon"] }
pathdiff = "0.2.1"
rayon = "1.5.1"
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.7"
